# kernel-template.rs

./: Cargo.toml  build.rs
.github/: README.md
.github/workflows/: docs.yml
kernel/: Cargo.toml
kernel/src/: constants.rs  lib.rs  logger.rs  main.rs
kernel/src/io/: serial.rs  vga.rs
src/: lib.rs  logger.rs  macros.rs  main.rs
src/io/: serial.rs  vga.rs
src/kernel/src/: lib.rs  logger.rs  main.rs
tests/: panic.rs
