[package]
name = "kernel"
version = "0.0.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.10"
spin = "0.9.8"
uart_16550 = "0.3.2"
volatile = "0.2.6"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
